lintian (2.1.3) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added
      - debian-watch-file-should-use-sf-redirector
      - debian-watch-file-specifies-wrong-upstream-version
      - debian-watch-file-specifies-old-upstream-version

  * checks/watch-file{,.desc}:
    + [RA] Merge a set of changes by Raphael Geissert:
      - Correctly parse multiple line continuations.
      - Don't attempt any detailed checks on version one watch files.
      - Recognize versionmangle in addition to [du]versionmangle.
      - Add line information to some of the tags.
      - Detect watch files that specify SourceForge download servers
        directly and suggest use of the QA sf.net redirector instead.
      - Detect watch files specifying an upstream version that matches a
        non-native Debian package version in debian/changelog.
      - Detect watch files specifying an upstream version for an older
        changelog entry when the current changelog entry has a newer
        upstream version.

  * reporting/templates/maintainer.tmpl:
    + [ADB] Print tags affecting udeb packages under a heading for that
      package, rather than merging them in to whichever binary package
      was last displayed (or the source package if the udeb is first
      alphabetically).
    + [ADB] Separate tags affecting a binary package from those of a source
      package with the same name when the binary is the first package produced
      from the source for which there are issues.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 14 Dec 2008 17:20:38 +0000

lintian (2.1.2) unstable; urgency=low

  * frontend/lintian:
    + [ADB] Accept "html" as a valid argument for --color again.

  * lib/Lintian/Output.pm:
    + [ADB] Re-introduce support for HTML coloured output.  (Closes: #508341)

  * man/lintian.1:
    + [ADB] Document that "--color=html" is supported again.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 10 Dec 2008 20:12:48 +0000
