@@ -22,6 +22,17 @@ Status: untested
 Info: The extended description (the lines after the first line of the
  "Description:" field) is empty.
 
+Tag: extended-description-is-probably-too-short
+Severity: minor
+Certainty: possible
+Ref: devref 6.2.1, devref 6.2.3
+Info: The extended description (the lines after the first line of the
+ "Description:" field) is only one or two lines long.  The extended
+ description should provide a user with enough information to decide
+ whether they want to install this package, what it contains, and how it
+ compares to similar packages.  One or two lines is normally not enough to
+ do this.
+
 Tag: description-contains-invalid-control-statement
 Severity: serious
 Certainty: certain
