@@ -11,3 +11,7 @@ Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Checks related to the cdbs build-system
  bla bla bla
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
