@@ -9,55 +9,79 @@ Standards-Version: 3.8.0
 Package: copyright.iso-8859-1
 Architecture: all
 Description: checks for non-utf-8-encodings
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.full-gpl
 Architecture: all
 Description: checks inclusion of GPL in full text
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.full-gfdl
 Architecture: all
 Description: checks inclusion of GFDL in full text
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.full-apache-2
 Architecture: all
 Description: checks inclusion of Apache 2.0 in full text
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.misc-errors
 Architecture: all
 Description: checks various errors in copyright files
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.no-errors
 Architecture: all
 Description: this should not emit any error
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.symlink
 Architecture: all
 Description: just use a symlink for the copyright file
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.compressed
 Architecture: all
 Description: include a valid copyright file and compress it
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.old-style
 Architecture: all
 Description: use an old-style directory structure
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.full-gpl-1
 Architecture: all
 Description: checks inclusion of GPL1
  This should not trigger any errors as the common license
  files only cover GPL >= 2
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: copyright.w3c
 Architecture: all
 Description: the w3c license claims to be "gpl compatible"
- This is just a sentence.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
