@@ -11,6 +11,10 @@ Architecture: alpha amd64 arm hppa hurd-i386 i386 ia64 kfreebsd-i386 m68k mips m
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Test for external debugging information
  lintian regression test for external debugging file handling.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: hello-dbg
 Priority: extra
@@ -18,6 +22,10 @@ Architecture: alpha amd64 arm hppa hurd-i386 i386 ia64 kfreebsd-i386 m68k mips m
 Depends: hello (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Test for external debugging information
  lintian regression test for external debugging file handling.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libhello0
 Section: libs
@@ -25,6 +33,10 @@ Architecture: alpha amd64 arm hppa hurd-i386 i386 ia64 kfreebsd-i386 m68k mips m
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Test for external debugging information
  lintian regression test for external debugging file handling.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libhello0-dbg
 Section: libdevel
@@ -33,3 +45,7 @@ Architecture: alpha amd64 arm hppa hurd-i386 i386 ia64 kfreebsd-i386 m68k mips m
 Depends: libhello (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Test for external debugging information
  lintian regression test for external debugging file handling.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
