@@ -10,3 +10,7 @@ Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Checks related to the dh build utility
  New in debhelper 7.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
