@@ -9,4 +9,6 @@ Package: diffs
 Architecture: all
 Depends: test
 Description: test lintian's diff file checks
- Regression test lintian's diff file checks.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
