@@ -9,6 +9,10 @@ Architecture: any
 Depends: ${shlibs:Depends}
 Description: test handling of files in /etc
  Regression test for lintian's handling of files in /etc.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: only-etcfiles
 Architecture: all
