@@ -9,7 +9,9 @@ Essential: no
 Architecture: all
 Depends: python-minimal
 Description: Generate some errors
- Field testing is fun!
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: another-version
 Essential: yes
@@ -18,3 +20,7 @@ Architecture: all
 Description: Also generate some errors
  This package gets another version number and tries to sneak in a new
  essential package.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
