@@ -24,3 +24,7 @@ Depends: test, foo++
 Description: see how lintian reacts to plus signs in the package name
  Regression test to see if lintian tests work on a package with plus signs in
  its name.  This has /usr/share/doc links to foo++ to trigger even more checks.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
