@@ -9,35 +9,59 @@ Package: libbaz1
 Architecture: any
 Provides: libbaz
 Description: test handling of library packages
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libbaz1-dev
 Architecture: any
 Depends: libbaz1 (= ${source:Version}), perlapi-5.8.8
 Description: development package
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libbaz2
 Architecture: any
 Depends: ${shlibs:Depends}, libssl0.9.8
 Description: test handling of library packages
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libbaz2-dev
 Architecture: any
 Depends: ${shlibs:Depends}, libbaz2 (= ${Source-Version})
 Description: development package
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: libbaz2-dbg
 Architecture: any
 Depends: libbaz2 (= ${binary:Version})
 Priority: optional
 Description: debugging package
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: ia32-libbaz2
 Architecture: all
 Depends: ${shlibs:Depends}
 Description: multiarch package
- Regression test for lintian's handling of libraries
+ Regression test for lintian's handling of libraries.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
