@@ -11,4 +11,6 @@ Package: maintainer-scripts
 Architecture: all
 Depends: test
 Description: test lintian's maintainer script checks
- Regression test lintian's maintainer script checks.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
