@@ -8,4 +8,6 @@ Package: manpages
 Architecture: all
 Depends: test
 Description: test lintian's manual page checks
- Regression test lintian's manual page checks.
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
