@@ -9,23 +9,31 @@ Package: patented-app
 Architecture: all
 Section: non-us
 Description: test for non-us checks
- regession test to stress non-us checks
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: crypto-app
 Architecture: all
 Section: non-US
 Description: proper non-US app
- This is a proper non-us package
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: broken-crypto
 Architecture: all
 Section: non-US/admin
 Description: broken non-US app
- This package declares an invalid section
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
 Package: nonfree-crypto-app
 Architecture: all
 Section: non-US/non-free
 Description: proper non-US/non-free app
- This is a proper non-us package
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
 
