@@ -13,8 +13,10 @@ E: description: description-is-debmake-template
 E: description: description-starts-with-package-name
 E: description: no-copyright-file
 I: description-bar: no-md5sums-control-file
+I: description-baz: extended-description-is-probably-too-short
 I: description-baz: no-md5sums-control-file
 I: description-foo: no-md5sums-control-file
+I: description-qux: extended-description-is-probably-too-short
 I: description-qux: no-md5sums-control-file
 I: description: no-md5sums-control-file
 W: description source: maintainer-also-in-uploaders
