@@ -3,6 +3,7 @@ E: dh-test source: missing-build-dependency-for-dh_-command dh_lisp=dh-lisp
 E: dh-test: description-is-dh_make-template
 E: dh-test: helper-templates-in-copyright
 E: dh-test: section-is-dh_make-template
+I: dh-test: extended-description-is-probably-too-short
 W: dh-test source: ancient-standards-version 3.6.2 (current is 3.8.0)
 W: dh-test source: debhelper-but-no-misc-depends dh-test
 W: dh-test source: debian-rules-ignores-make-clean-error line 48
