@@ -5,7 +5,12 @@ lintian (2.1.3) UNRELEASED; urgency=low
       - debian-watch-file-should-use-sf-redirector
       - debian-watch-file-specifies-wrong-upstream-version
       - debian-watch-file-specifies-old-upstream-version
+      - extended-description-is-probably-too-short
 
+  * checks/description{,.desc}:
+    + [RA] Check for extended descriptions shorter than three lines; they
+      probably don't contain enough information.  Patch from Raphael
+      Geissert.
   * checks/watch-file{,.desc}:
     + [RA] Merge a set of changes by Raphael Geissert:
       - Correctly parse multiple line continuations.
